--- a/app/Resources/views/Escuela/index.html.twig
+++ b/app/Resources/views/Escuela/index.html.twig
@@ -19,7 +19,7 @@
             <header>
                     <span class="widget-icon"> <i class="fa fa-table"></i> </span>
                     <h2>Escuelas UNAD</h2>
-            </header>    
+            </header>
 <!-- widget div-->
 <div>
 
@@ -39,6 +39,7 @@
                 <th>Nombre</th>
                 <th>Sigla</th>
                 <th>Decano</th>
+                <th>Seretaría</th>
                 <th>Docentes</th>
             </tr>
         </thead>
@@ -53,20 +54,23 @@
                 <td>
                {{ entity.decano.nombres }} {{ entity.decano.apellidos }}
                 </td>
+                <td>
+                    {{ entity.secretaria.nombres }} {{ entity.secretaria.apellidos }}
+                </td>
                  <td>
-                <a  href="{{ path('docente_escuela', { 'id': entity.id, 'periodo': app.session.get('periodoe') }) }}">Ver</a>      
+                <a  href="{{ path('docente_escuela', { 'id': entity.id, 'periodo': app.session.get('periodoe') }) }}">Ver</a>
                 </td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
-                                                                                
+
             </div>
               <!-- end widget content -->
             </div>
             <!-- end widget div -->
         </div>
-        <!-- end widget -->                                                           
+        <!-- end widget -->
         </article>
 <div class="modal fade" data-refresh="true" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 <div class="modal-dialog">
