fix dofe periodo and avance info final 2022

--- a/src/Admin/MedBundle/Resources/views/Plangestion/conf.html.twig
+++ b/src/Admin/MedBundle/Resources/views/Plangestion/conf.html.twig
@@ -1,6 +1,6 @@
 {% extends '::base.html.twig' %}
 {% block body -%}
-    <h3>Roles para autoevaluación : {{ entity.docente.user.nombres }} {{ entity.docente.user.apellidos }}
+    <h3>Roles para autoevaluación de : {{ entity.docente.user.nombres }} {{ entity.docente.user.apellidos }}
         : {{ entity.docente.user.id }}</h3>
 
     <table class="table table-bordered table-striped hidden-mobile" style="width: 95%">
