ver lider en  mi escuela

--- a/app/Resources/views/Escuela/info.html.twig
+++ b/app/Resources/views/Escuela/info.html.twig
@@ -66,10 +66,9 @@
 
                 <td>{{oferta.programa.nivel}}</td>
                  <td>{{oferta.programa.nombre}}</td>
-                <td>{{oferta.lider? oferta.lider.user.nombres~' '~oferta.lider.user.Apellidos : 'sin'}}</td>
-
+                     <td>{{oferta.programa.lider? oferta.programa.lider.nombres~' '~oferta.programa.lider.Apellidos : 'sin'}}</td>
                 <td>
-                {% if is_granted('ROLE_SECA') or is_granted('ROLE_DEC')   %}
+                {% if is_granted('ROLE_SEC') or is_granted('ROLE_DE')   %}
                 <a data-toggle="modal" href="{{ path('programa_edit', { 'id': oferta.programa.id }) }}" data-target="#myModal" class="btn btn-primary btn-xs"><i class="fa fa-edit"></i></a>
                 {%endif%}
                  </td>
