--- a/app/Resources/views/Escuela/info.html.twig
+++ b/app/Resources/views/Escuela/info.html.twig
@@ -62,7 +62,7 @@
             </tr>
          {% for oferta in ofertado %}
                  <tr>
-                 <td><a href="{{ path('programa_show', { 'id': oferta.id }) }}">{{oferta.programa.id}}</a></td>
+                 <td><a href="{{ path('programa_show', { 'id': oferta.programa.id }) }}">{{oferta.programa.id}}</a></td>
 
                 <td>{{oferta.programa.nivel}}</td>
                  <td>{{oferta.programa.nombre}}</td>
