--- a/src/Admin/UnadBundle/Resources/views/Docente/finalanual.html.twig
+++ b/src/Admin/UnadBundle/Resources/views/Docente/finalanual.html.twig
@@ -88,7 +88,7 @@
         <tr>
             <td class="centro">Tipo de Evaluación</td>
             <td class="centro">Ponderación:</td>
-            <td class="centro">Porcentil</td>
+            <td class="centro">Percentil</td>
         </tr>
         <tr>
             <td>Heteroevaluación</td>
