--- a/src/Admin/UnadBundle/Resources/views/Docente/final.html.twig
+++ b/src/Admin/UnadBundle/Resources/views/Docente/final.html.twig
@@ -173,7 +173,7 @@
         <tr>
             <td class="centro">Tipo de Evaluación</td>
             <td class="centro">Ponderación:</td>
-            <td class="centro">Porcentil</td>
+            <td class="centro">Percentil</td>
         </tr>
         <tr>
             <td>Autoevaluación (A1)</td>
