--- a/src/Admin/UnadBundle/Resources/views/Docente/finaldc.html.twig
+++ b/src/Admin/UnadBundle/Resources/views/Docente/finaldc.html.twig
@@ -156,7 +156,8 @@ Aprobado
     <tr>
     <td class="centro">Tipo de Evaluación</td>
     <td class="centro">Ponderación:</td>
-    <td class="centro">Porcentil</td>
+    <td class="centro">Percentil</td>
+    <td class="centro">Percentil</td>
   </tr>
   <tr>
     <td>Autoevaluación (A1)</td>
