--- a/src/AppBundle/Resources/views/Default/passmed.html.twig
+++ b/src/AppBundle/Resources/views/Default/passmed.html.twig
@@ -8,20 +8,20 @@
     <meta name="author" content="">
 
     <!-- Use the correct meta names below for your web application
-         Ref: http://davidbcalhoun.com/2010/viewport-metatag 
-         
+         Ref: http://davidbcalhoun.com/2010/viewport-metatag
+
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">-->
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <!-- Basic Styles -->
-    <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.min.css">	
+    <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="css/font-awesome.min.css">
 
     <!-- SmartAdmin Styles : Please note (smartadmin-production.css) was created using LESS variables -->
     <link rel="stylesheet" type="text/css" media="screen" href="css/smartadmin-production.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/smartadmin-skins.css">	
+    <link rel="stylesheet" type="text/css" media="screen" href="css/smartadmin-skins.css">
 
     <!-- SmartAdmin RTL Support is under construction
         <link rel="stylesheet" type="text/css" media="screen" href="css/smartadmin-rtl.css"> -->
@@ -70,7 +70,7 @@
                         <p>- Cualquier duda o inquietud puede escribir a siga@unad.edu.co.</p>
 
 
-                    </div>     
+                    </div>
                 </div>
 
                 <div class="col-xs-12 col-sm-12 col-md-5 col-lg-4">
@@ -81,7 +81,7 @@
                         <header>
                             <span class="widget-icon"> <i class="fa fa-table"></i> </span>
                             <h2>Generar Contraseña</h2>
-                        </header>     
+                        </header>
                         <!-- widget div-->
                         <div>
 
@@ -99,7 +99,7 @@
                                     <form method="POST" id="checkout-form" class="smart-form" novalidate="novalidate" method="POST" action="{{path('home_pass2')}}" {{ form_start(form) }}
 
                                         <div id="form_body">
-                                            {% include 'AdminUserBundle:Default:passform.html.twig' with {'form': form} %}
+                                            {% include 'AppBundle:Default:passform.html.twig' with {'form': form} %}
                                         </div>
                                         <footer>
                                             <button type="submit" class="btn btn-primary">Enviar</button>
@@ -124,7 +124,7 @@
 
     </div>
 
-    <!--================================================== -->	
+    <!--================================================== -->
 
     <!-- PACE LOADER - turn this on if you want ajax loading to show (caution: uses lots of memory on iDevices)-->
     <script src="js/plugin/pace/pace.min.js"></script>
@@ -133,10 +133,10 @@
     <script src="{{ asset('js/libs/jquery-2.0.2.min.js') }}"></script>
     <script src="{{ asset('js/libs/jquery-ui-1.10.3.min.js') }}"></script>
 
-    <!-- JS TOUCH : include this plugin for mobile drag / drop touch events 		
+    <!-- JS TOUCH : include this plugin for mobile drag / drop touch events
     <script src="js/plugin/jquery-touch/jquery.ui.touch-punch.min.js"></script> -->
 
-    <!-- BOOTSTRAP JS -->		
+    <!-- BOOTSTRAP JS -->
     <script src="js/bootstrap/bootstrap.min.js"></script>
 
     <!-- CUSTOM NOTIFICATION -->
@@ -170,9 +170,9 @@
     <script src="js/plugin/fastclick/fastclick.js"></script>
 
     <!--[if IE 7]>
-        
+
         <h1>Your browser is out of date, please update your browser by going to www.microsoft.com/download</h1>
-        
+
     <![endif]-->
 
     <!-- MAIN APP JS FILE -->
