--- a/src/Admin/MedBundle/Resources/views/Plangestion/conf.html.twig
+++ b/src/Admin/MedBundle/Resources/views/Plangestion/conf.html.twig
@@ -19,9 +19,11 @@
                 <h5>Apreciado Docente Ocasional y Hora Cátedra:</h5>
                 <ul>
                     <li>Los roles registrados para autoevaluación son suministradados por Talento Humano (SOCA).</li>
-                    <li>Los roles de formación (Tutor / Director de Curso) que no apararezcan en este registro y usted desempeño puede agregarlos con el bóton "Agregar".
+                    <li>Los roles de formación (Tutor / Director de Curso) que no apararezcan en este registro y usted
+                        desempeño puede agregarlos con el bóton "Agregar".
                     </li>
-                    <li>La autoevaluación se realiza por el desempeño en general de cada rol durante el periodo académico.
+                    <li>La autoevaluación se realiza por el desempeño en general de cada rol durante el periodo
+                        académico.
                     </li>
                 </ul>
                 <h5>Importante antes de confirmar su asignación:</h5>
@@ -37,58 +39,6 @@
             </td>
         </tr>
         </tbody>
-    </table>
-    <div class="alert alert-info alert-block">
-        <h4 class="alert-heading">IMPORTANTE:</h4>
-        Por disposición de la Gerencia de Talento y la Vicerrectoría académica el proceso de autoevaluación se debe
-        realizar solamente por roles de formación : Tutor, Director, Consejero y Componente Práctico.
-        En caso de no tener ninguno de los roles anteriores se asigna el Rol “Otras Actividades”.
-    </div>
-    <table class="table table-bordered table-striped hidden-mobile" style="width: 95%">
-        <thead>
-        <tr>
-            <th colspan="3">Agregar roles de formación</th>
-        </tr>
-        </thead>
-        <tbody>
-
-        <tr>
-            <td>
-                1. Tutor
-            </td>
-            <td>
-                Agregar Rol de Tutor para autoevaluación en caso que usted desempeño el rol y no esta en el listado.
-            </td>
-            <td>
-                {% if estutor %}
-                    Agregado
-                {% else %}
-                    <a href="{{ path('plangestion_conf_add', { 'id': 1 }) }}" class="btn btn-primary btn-xs"><i
-                                class="fa fa-plus"></i> Agregar</a>
-                {% endif %}
-            </td>
-        <tr>
-            <td>
-                2. Director
-            </td>
-            <td>
-                Agregar Rol de Director para autoevaluación en caso que usted desempeño el rol y no esta en el listado.
-            </td>
-            <td>
-                {% if esdirector %}
-                    Agregado
-                {% else %}
-                    <a href="{{ path('plangestion_conf_add', { 'id': 2 }) }}" class="btn btn-primary btn-xs"><i
-                                class="fa fa-plus"></i> Agregar</a>
-                {% endif %}
-            </td>
-        </tr>
-        </tr>
-        <tr>
-        </tr>
-        </tbody>
-    </table>
-    <br>
     </table>
     <table class="table table-bordered table-striped hidden-mobile" style="width: 95%">
         <thead>
@@ -127,6 +77,56 @@
 
         </tbody>
     </table>
+    <div class="alert alert-info alert-block">
+        <h4 class="alert-heading">IMPORTANTE:</h4>
+        Por disposición de la Gerencia de Talento y la Vicerrectoría académica el proceso de autoevaluación se debe
+        realizar solamente por roles de formación : Tutor, Director, Consejero y Componente Práctico.
+        En caso de no tener ninguno de los roles anteriores se asigna el Rol “Otras Actividades”.
+    </div>
+    <table class="table table-bordered table-striped hidden-mobile" style="width: 95%">
+        <thead>
+        <tr>
+            <th colspan="3">Agregar roles de formación <b>SOLAMENTE</b> en caso que no lo tenga asignado</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>
+                1. Tutor
+            </td>
+            <td>
+                Agregar Rol de Tutor para autoevaluación <b>SOLAMENTE</b> en caso que usted desempeño el rol y no esta en el anterior listado.
+            </td>
+            <td>
+                {% if estutor %}
+                    Agregado
+                {% else %}
+                    <a href="{{ path('plangestion_conf_add', { 'id': 1 }) }}" class="btn btn-primary btn-xs"><i
+                                class="fa fa-plus"></i> Agregar</a>
+                {% endif %}
+            </td>
+        </tr>
+        <tr>
+            <td>
+                2. Director
+            </td>
+            <td>
+                Agregar Rol de Director para autoevaluación  <b>SOLAMENTE</b> en caso que usted desempeño el rol y no esta en el anterior listado.
+            </td>
+            <td>
+                {% if esdirector %}
+                    Agregado
+                {% else %}
+                    <a href="{{ path('plangestion_conf_add', { 'id': 2 }) }}" class="btn btn-primary btn-xs"><i
+                                class="fa fa-plus"></i> Agregar</a>
+                {% endif %}
+            </td>
+        </tr>
+        </tbody>
+    </table>
+    <br>
+    </table>
+
     <br>
     <div class="modal fade" data-refresh="true" id="ModalCerrar" tabindex="-1" role="dialog"
          aria-labelledby="myModalLabel" aria-hidden="true">
