--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -136,7 +136,7 @@
                 <ul style="display: block;">
                     <li>
                         <a href="{{ path('escuela_info') }}"><i class="fa fa-book"></i> Mi Escuela</a>
-                        <a href="{{ path('home_user_periodo') }}">Seleccionar periodo 2022</a>
+                        <a href="{{ path('home_user_periodo') }}">Seleccionar Periodo</a>
                     </li>
                 </ul>
             <li>
@@ -158,7 +158,7 @@
                     <ul style="display: block;">
                         <li>
                             <a href="{{ path('escuela_info') }}"><i class="fa fa-book"></i> Mi Escuela</a>
-                            <a href="{{ path('home_user_periodo') }}">Seleccionar periodo 2022</a>
+                            <a href="{{ path('home_user_periodo') }}">Seleccionar periodo</a>
                         </li>
                     </ul>
 
@@ -171,7 +171,7 @@
                 <ul style="display: block;">
                     <li>
                         <a href="{{ path('home_user_inicio') }}">Periodo en curso</a>
-                        <a href="{{ path('home_user_periodo') }}">Seleccionar periodo 2022</a>
+                        <a href="{{ path('home_user_periodo') }}">Seleccionar periodo</a>
                         <a href="{{ path('archivo_docente') }}">Archivo</a>
                     </li>
                 </ul>
