fix periodo info dc

--- a/src/Admin/UnadBundle/Resources/views/Docente/finaldc.html.twig
+++ b/src/Admin/UnadBundle/Resources/views/Docente/finaldc.html.twig
@@ -19,7 +19,7 @@
       <td><b>Cédula</b></td>
     <td>{{docente.user.id}}</td>
     <td><b>Periodo de Evaluación</b></td>
-    <td>{{docente.periodo}}</td>
+    <td>{{periodo.observaciones}}</td>
   </tr>
   <tr>
     <td><b>Nombres</b></td>
