--- a/src/Admin/UnadBundle/Resources/views/Docente/coevaltutor.html.twig
+++ b/src/Admin/UnadBundle/Resources/views/Docente/coevaltutor.html.twig
@@ -28,7 +28,7 @@
                     {%if tutor.coevaltutor.f0 %}
                     Evaluado ({{tutor.coevaltutor.f0}})
                     {%else%}
-                     <a href="{{ path('coevaltutor_edit', { 'id': tutor.id }) }}">Evaluar...</a> 
+                     <a href="{{ path('coevaltutor_edit', { 'id': tutor.id }) }}">Evaluar...</a>
                     {%endif%}
                 {%else%}
                 <a href="{{ path('coevaltutor_edit', { 'id': tutor.id }) }}">Evaluar...</a>
@@ -41,13 +41,13 @@
  {%endfor%}
     <div class="alert alert-info alert-block">
 
-                <h4 class="alert-heading">IMPORTANTE Señor Director de Curso:</h4>
+                <h4 class="alert-heading">IMPORTANTE Apreciado Director de Curso:</h4>
                Si en los anteriores cursos no aparece registrado alguno de los tutores que perteneció a la red, usted puede incluirlo así:<br>
                 1. Regrese a la página anterior<br>
                 2. Clic sobre el curso y periodo<br>
                 3. Clic sobre el botón "Editar Red" (Requiere el número de identificación del docente)<br>
                <br>
-               Si es el caso contrario, tambien puede quitar el tutor de la red realizando los pasos anteriores y oprimiendo el botón de eliminar (icono de una caneca) que esta al lado derecho.
-               
-        </div>    
+        En caso contrario, puede quitar el tutor de la red realizando los pasos anteriores y oprimiendo el botón de eliminar que está al lado derecho.
+
+        </div>
 {% endblock %}
